# NormalNvim

./: Cargo.toml  flake.nix  shell.nix
data_forwarder/: Cargo.toml
data_forwarder/src/: app.rs  lib.rs  main.rs
data_provider/: Cargo.toml
data_provider/src/: utils.rs
data_provider/src/file/: utils.rs
data_provider/src/market/polygon/: mod.rs  parser.rs  stream_client.rs
data_providers/: Cargo.toml
data_providers/src/: lib.rs  parser.rs  utils.rs
data_providers/src/market/forwarder/: forwarder.rs
data_providers/src/market/polygon/: api_client.rs  models.rs  parser.rs  stream_client.rs  utils.rs
domain/: Cargo.toml
domain/src/: broker.rs  data.rs  engine.rs  error.rs  event.rs  lib.rs  models.rs  order.rs  portfolio.rs  risk.rs  runner.rs  strategy.rs
domain/src/broker/: account_impl.rs  active_order.rs  active_order_test.rs  broker.rs  broker_test.rs  mod.rs  orders.rs  pending.rs  security_transaction.rs  strategy_portfolio_impl.rs  utils.rs
domain/src/broker/order_manager/: mod.rs  order_manager_impl.rs  utils.rs
domain/src/broker/orders/: mod.rs  orders.rs  pending.rs  security_transaction.rs
domain/src/event/: channel.rs  channel_pipe.rs  event.rs  mod.rs  model.rs
domain/src/models/: event.rs  mod.rs  order.rs  price.rs  security.rs  utils.rs
domain/src/models/orders/: common.rs  filled_order.rs  limit.rs  market.rs  mod.rs  new_order.rs  one_cancels_others.rs  order_result.rs  pending_order.rs  security_position.rs  stop_limit_market.rs
domain/src/models/price/: candle.rs  candle_history.rs  common.rs  mod.rs  price_bar.rs  price_history.rs  quote.rs
domain/src/risk/: algo_risk_config.rs  config.rs  error.rs  errors.rs  mod.rs  risk_engine.rs  risk_engine_test.rs  utils.rs
domain/src/strategy/: algo_event.rs  algorithm.rs  error.rs  errors.rs  mod.rs  portfolio.rs  strategy.rs  strategy_engine.rs  strategy_test.rs
domain/src/strategy/model/: algo_event.rs  mod.rs  signal.rs
engine/: Cargo.toml
engine/src/: app.rs  lib.rs  main.rs
engine/src/actors/: actor_runner.rs  algo_actor.rs  broker_price_event_actor.rs  event_bus.rs  mod.rs  models.rs  risk_engine_actor.rs
engine/src/algorithms/: fake_algo.rs  mod.rs
engine/src/algorithms/fake_algo/: algo.rs
engine/src/broker/: mod.rs
engine/src/brokers/: fake_broker.rs
engine/src/data_providers/: back_test.rs  fake_provider.rs  file_provider.rs  mod.rs
engine/src/data_providers/file/: file_provider.rs  mod.rs
engine/src/data_providers/polygon/: api_client.rs  mod.rs  models.rs  parser.rs  polygon.rs  stream_client.rs  utils.rs
engine/src/event_providers/: back_test.rs  fake_provider.rs  file_provider.rs  in_memory_qoute_provider.rs  mod.rs  provider.rs  utils.rs
engine/src/event_providers/market/polygon/: api_client.rs  models.rs  parser.rs  stream_client.rs  utils.rs
engine/src/secrets/: error.rs  mod.rs  secrets.rs
engine/src/telemetry/: metrics.rs  mod.rs
engine/src/telemetry/wrappers/: algorithm.rs  data_stream.rs  mod.rs  strategy_portfolio.rs
forwarder/: Cargo.toml
forwarder/src/: app.rs  main.rs
lua/base/: 1-options.lua  3-autocmds.lua  4-mappings.lua
lua/base/icons/: nerd_font.lua
lua/base/utils/: lsp.lua
lua/plugins/: 1-base-behaviors.lua  2-ui.lua  3-dev-core.lua  4-dev.lua
models/: Cargo.toml
models/src/: event.rs  lib.rs  security.rs
models/src/orders/: common.rs  filled_order.rs  limit.rs  market.rs  new_order.rs  one_cancels_others.rs  order_result.rs  pending_order.rs  security_position.rs  stop_limit_market.rs
models/src/price/: common.rs  price_bar.rs  price_history.rs  quote.rs
models/src/strategy/: algo_event.rs  common.rs  mod.rs  signal.rs
traits/: Cargo.toml
traits/src/: data.rs  lib.rs  order.rs
traits/src/strategy/: algorithm.rs  error.rs  mod.rs  portfolio.rs
