[package]
name = "data_forwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
color-eyre = "0.5"
actix-web = "4"
actix = "0.13"
