[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6.1", features = [ "v4", "fast-rng", "macro-diagnostics", ] }
crossbeam = "0.8"
async-trait = "0.1.72"
futures-util = "0.3.28"
rust_decimal = "1.32"
anyhow = { version = "1.0", features = ["backtrace"] }
