[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.72"
rand = "0.8"
futures-util = "0.3.28"
tungstenite = { version = "0.16.0", features = ["native-tls"] }
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
async-stream = "0.3.5"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = "1.32"
# anyhow = "1.0.75"
eyre = "0.6"
color-eyre = "0.5"
sec = "1.0.0"
thiserror = "1.0"
tokio-stream = "0.1"
actix = "0.13"
actix-rt = "2.2"
derive_builder = "0.10"
getset = "0.1"
# Telemetry
opentelemetry = { version = "0.22", features = ["metrics"] }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic", "metrics"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.3", features = ["metrics"] }
opentelemetry-prometheus = "0.15.0"
prometheus = " 0.13"
actix-web = "4"
