[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getset = "0.1.2"
strum = "0.26"
strum_macros = "0.26"
derive_builder = "0"
async-trait = "0.1.72"
thiserror = "1.0"
